--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,14 @@
 #           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
 
+name: Main Workflow
+
 on:
   # Trigger analysis when pushing in master or pull requests, and when creating
   # a pull request. 
   pull_request:
       types: [opened, synchronize, reopened]
-name: Main Workflow
+
 jobs:
   sonarqube:
     runs-on: ubuntu-latest
@@ -39,6 +41,8 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+        SONAR_ORGANIZATION: ${{ secrets.SONAR_ORGANIZATION }}
 
     # Check the Quality Gate status.
     - name: SonarQube Quality Gate check
@@ -49,6 +53,8 @@ jobs:
       env:
        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} #OPTIONAL
+       SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+       SONAR_ORGANIZATION: ${{ secrets.SONAR_ORGANIZATION }}
 
     # Optionally you can use the output from the Quality Gate in another step.
     # The possible outputs of the `quality-gate-status` variable are `PASSED`, `WARN` or `FAILED`.
